--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 on: push
 jobs:
-    first-job: 
+    second-job: 
        runs-on: windows-latest
        steps:
              - run: node --version
              - run: npm --version
+             - users: actions/checkout@v3
+             - run: node index.js
